Added information that will display on page

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -13,7 +13,7 @@
       <div id="menu-img">
         <img src="menu-bg.png" alt="Floral background img">
       </div>
-      <ul>
+      <ul id="menu">
         <li>Home</li>
         <li>About Me</li>
         <li>Projects</li>
@@ -25,14 +25,23 @@
       <h3>Web Developer</h3>
     </p>
     <section>
-      <div id="aboutMe">
-        <h2>About Me</h2>
+      <div id="about-me">
+        <h2>A Little Bit About Me:</h2>
+        <p>The truth is, I established my interest in IT by chance.</p>
+        <p>It was 2014 and I was 16 years old. Like any teenager, I ended up sleeping in, and missed my chance to pick out classes for the schedule of my junior year. Instead, my father decided to still go and chose the classes for me. Admittedly, I was not looking forward to learning computer programming. After my first week in class though, I realized that <b><i>this</i></b> was what I was meant to do.</p>
+        <p>That year, I learned how to code using Visual Basic. I loved it so much, I took two more classes my senior year learning javascript, Java, and game development. A couple years later, I began attending Coastal Carolina Community College. By 2020, I received my A.A.S. in Computer Programming. I was still not satisfied, and decided to attend a boot camp with UNC Chapel Hill.</p>
+        <p>Now that I am finished with my education, I am eager to work in my desired field. I am able to adapt quickly to a fast-paced environment, aggressively meet deadlines with honest work, and perform both independently and collectively in a group. In the work setting, I tend to be a visionary worker who is devoted to the task by finding unique and thoughtful solutions with integrity.</p>
       </div>
       <div id="projects">
         <h2>Projects</h2>
+        <p><a href="file:///C:/Users/aaeku/bootcamp/challenge-1127/index.html">Horiseon</a></p>
       </div>
-      <div id="contactInfo">
+      <div id="contact-info-menu">
         <h2>Contact Info</h2>
+          <ul id="contact-info">
+            <li>Email: meliaukea@gmail.com</li>
+            <li>Phone Number: 910-599-0702</li>
+          </ul>
       </div>
     </section>
   </body>
