Updating most recent copy of portfolio website

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -10,9 +10,8 @@
   </head>
   <body>
     <header>
-      <div id="menu-img">
-        <img src="menu-bg.png" alt="Floral background img">
-      </div>
+      <img id="menu-img"src="menu-bg.png" alt="Floral background img">
+      <img id="me-img" src="me.png" alt="Picture of myself">
       <ul id="menu">
         <li>Home</li>
         <li>About Me</li>
