Made a functioning menu that scrolls to corresponding sections in the webpage

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -9,14 +9,14 @@
     <title>Melody Iaukea-Gibson | Portfolio</title>
   </head>
   <body>
-    <header>
+    <header id="home">
       <img id="menu-img"src="menu-bg.png" alt="Floral background img">
       <img id="me-img" src="me.png" alt="Picture of myself">
       <ul id="menu">
-        <li>Home</li>
-        <li>About Me</li>
-        <li>Projects</li>
-        <li>Contact Info</li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact Info</a></li>
       </ul>
     </header>
     <p>
@@ -24,7 +24,7 @@
       <h3>Web Developer</h3>
     </p>
     <section>
-      <div id="about-me">
+      <div id="about">
         <h2>A Little Bit About Me:</h2>
         <p>The truth is, I established my interest in IT by chance.</p>
         <p>It was 2014 and I was 16 years old. Like any teenager, I ended up sleeping in, and missed my chance to pick out classes for the schedule of my junior year. Instead, my father decided to still go and chose the classes for me. Admittedly, I was not looking forward to learning computer programming. After my first week in class though, I realized that <b><i>this</i></b> was what I was meant to do.</p>
@@ -37,7 +37,7 @@
       </div>
       <div id="contact-info-menu">
         <h2>Contact Info</h2>
-          <ul id="contact-info">
+          <ul id="contact">
             <li>Email: meliaukea@gmail.com</li>
             <li>Phone Number: 910-599-0702</li>
           </ul>
