Created a hyperlinked image to one of my projects

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -33,7 +33,7 @@
       </div>
       <div id="projects">
         <h2>Projects</h2>
-        <p><a href="file:///C:/Users/aaeku/bootcamp/challenge-1127/index.html" target="_blank">Horiseon</a></p>
+        <p><a href="file:///C:/Users/aaeku/bootcamp/challenge-1127/index.html" target="_blank">Horiseon<img src="horiseon.png"></a></p>
       </div>
       <div id="contact-info-menu">
         <h2>Contact Info</h2>
